# customer-influencer-agents

./: .env.example  .gitignore  PROJECT_README.md  README.md  docker-compose.yml
Customer_Support_System/: Customer_Support_API_Endpoints.md  Customer_Support_Schema.md  Dockerfile  Dockerfile.mcp  PROJECT_README.md  README.md  main.py  mcp_server.py  models.py  requirements.txt  samples.py  storage.py
Customer_Support_System/cs-monitor/: Dockerfile  index.html  package-lock.json  package.json
customer-agent/: Dockerfile  README.md  personas.py  personas.yaml  pyproject.toml  register.py  requirements.txt  system_prompt.py  test_packaging.py  test_workflow.py  workflow.yml
customer-agent/app/: main.py
customer-agent/guardrails_config/: config.yml  prompts.yml
docs/: customer_persona_prompt.md  influencer_persona_prompt.md  persona_attributes.md  sample_scenarios.md
influencer-agent/: Dockerfile  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
influencer-agent/app/: main.py
influencer-agent/configs/: config.nim.yml  config.openai.yml
influencer-agent/personas/: brand_supporter.yaml
influencer-agent/src/influencer_agent/: main.py  nat_client.py  persona.py  poller.py  register.py  schemas.py  social_client.py  state.py
modular-agent/: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  TASKS.md  conftest.py  requirements.txt
shared/: keyword_scorer.py
social_network/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
(+157 files in other folders)
